[package]
name = "alloc_hoard"
version = "0.3.0"
description = "use Hoard as rust's allocator"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
build = "build.rs"
license = "GPL-2.0/GPL-3.0/Apache-2.0/MIT"
keywords = ["allocator", "Hoard"]
repository = "https://github.com/bpowers/liballoc_hoard"

[dependencies]
libc = "0.2"

[build-dependencies]
gcc = "0.3"
